fix: flip hero banner mask so image fades on left, fully visible on right

--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -21,8 +21,8 @@
   background-size: min(1400px, 100%) auto;
   background-position: center center;
   background-repeat: no-repeat;
-  -webkit-mask-image: linear-gradient(to right, black 0%, black 45%, transparent 100%);
-  mask-image: linear-gradient(to right, black 0%, black 45%, transparent 100%);
+  -webkit-mask-image: linear-gradient(to right, transparent 0%, black 55%, black 100%);
+  mask-image: linear-gradient(to right, transparent 0%, black 55%, black 100%);
   z-index: 0;
 }
 
